[gd_scene load_steps=5 format=3 uid="uid://bncs3ty5546u5"]

[ext_resource type="Texture2D" uid="uid://txfxh2a7blna" path="res://assets/sprites/TestBackgroundSprite.png" id="1_yautc"]
[ext_resource type="Script" uid="uid://813n1uieffou" path="res://scripts/game_manager.gd" id="2_yautc"]
[ext_resource type="Script" uid="uid://b8mfeebciipi4" path="res://scripts/tower_placement_manager.gd" id="5_48ne7"]

[sub_resource type="Curve2D" id="Curve2D_86d4f"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 981, -636, 132.149, -97.4433, -132.149, 97.4433, 815, -417, 120.136, -86.7646, -120.136, 86.7646, 42, -310, 33.371, -170.859, -33.371, 170.859, 190, 184, 208.235, -13.3484, -208.235, 13.3484, -555, 280, 0, 0, 0, 0, -1081, 581)
}
point_count = 6

[node name="TestLevel" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_yautc")

[node name="Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_86d4f")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("2_yautc")
metadata/_custom_type_script = "uid://813n1uieffou"

[node name="TowerPlacementManager" type="Node2D" parent="."]
position = Vector2(1770, 0)
script = ExtResource("5_48ne7")
metadata/_custom_type_script = "uid://b8mfeebciipi4"

[node name="UICanvas" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UICanvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UICanvas/UI"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="Button" type="Button" parent="UICanvas/UI/VBoxContainer"]
z_index = -1
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 20
text = "test_tower1"

[connection signal="mouse_entered" from="UICanvas/UI/VBoxContainer" to="TowerPlacementManager" method="_on_v_box_container_mouse_entered"]
[connection signal="mouse_exited" from="UICanvas/UI/VBoxContainer" to="TowerPlacementManager" method="_on_v_box_container_mouse_exited"]
[connection signal="button_down" from="UICanvas/UI/VBoxContainer/Button" to="TowerPlacementManager" method="_on_button_button_down"]
[connection signal="pressed" from="UICanvas/UI/VBoxContainer/Button" to="TowerPlacementManager" method="_on_button_pressed"]
